display InitialImpression, Hover Country Select color readable, translations , fix update Beer error

--- a/modules/UI/CardsUI/BeerCard/beerCard.module.css
+++ b/modules/UI/CardsUI/BeerCard/beerCard.module.css
@@ -1,5 +1,7 @@
 .chipName {
     width: 100%;
+    display: "flex";
+    gap: 2px;
     overflow: auto;
     word-break: break-all;
     background-color: rgba(0, 0, 0, 0.42);
